--- a/website/src/assets/styles/style.css
+++ b/website/src/assets/styles/style.css
@@ -65,6 +65,7 @@ body {
 
 ::-webkit-scrollbar-thumb {
   background-color: #a0a0a0;
+  border-radius: 8px;
 }
 
 h1 {
